# timelord

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  (+1 more)
.sqlx/: query-04431246e85d43a3ab1cab0fc6bf5f616f313fb71a6b1663d11cc20ffc733ef4.json  query-077a14fab1c9297d41aed277444a88d55ea30a2e47cb61eb3a561eb6fb96aceb.json  query-0e8b360fb60ee5e7a6137633657f2c94a28f73e8a9900ee482487146960b2e6a.json  query-0fd99b5f4fb4296d92783a8f2f5fc26ea9db6faf05533cc81c1447ca506535db.json  query-0ffa387b9015c003e5d36466fa95bf6d33c09dabc6ccae91073acaf54ea641ca.json  query-186541c1047e32f86c7ef288e476be234bef0398b3f084b3fe40846388233dd4.json  query-1ae51f52b8c4c5abf64a490261b3fd5323f4c07d466ba673e910eaa21643ea8e.json  query-1cfa4bc7854ba7545ba0b9e03881f3e35cf96e938cce8b789a36080d155ebbcb.json  query-1e00f1a7fd52b7151a53d1de04e19f09492b64a7dd923831b209f708a1bda067.json  query-1fcdf5aabad69e2222784e0bc25eb5d04c8fa341bcc747373e0cdb38047dc0ae.json  query-2395900efabe989cfc7546d8af1a1d1652582d07ebec2c90f75b5666f0bff3e6.json  query-25c1ea1e6e9bd54689747002f0218298692935c18cfa2dd28fa20e54f34aab61.json  query-2844c60ef135b6ba51df46c82ac8519c5bef50af6f363ebf8d00bd8d014eecd8.json  query-2d3b0005f780620dc436311983f9a53bf0e916499d3329f30d48113ff7252169.json  query-304fd0e80938803de0e876658917f6efc8244deed2ebdb89a2fb41ff36d95d2a.json  query-30fc9d612de61146e521d0eb65a6359229a7ad4cbbba1b87e734b61e74194702.json  query-329cc9f698e6894caf3d14b11bd12381fe2ac5c68cca205ddda91bd27c9a9444.json  query-3e3c8c92cc58612f49be147bdd13be1195882b6b0f27b80d0a11a91f10ecd951.json  query-42ce93d5e76f30412809efc7db3a36c83200d32a913f91a4ebdec1a36a0f867e.json  query-47d221895b17bf9f74bced7eb676e9e5789ba4b816c8ab87e16d47931fb3a3a8.json  query-4a43e227b9fb8f91edba2051f0ccc0391a407ceea1e5ad6ba72d5576f113703f.json  query-4d6c8beb96585354254427f13ddad49791606d90ac5e077eeddcc4b508995943.json  query-4e0f81ba9913ead3bcb08847eaa14370ac3c52d5b13e05f0fd6a4d8bbcdb28e8.json  query-566cec6c38e6e1fc1a0bbc8b9e9cf58d3036eddf6558c00b86255c782cdf42f8.json  query-5dedc1a2182d0d61c2d02d2a8a0a805a734c9e8dbb4c6223e892b555537d2948.json  query-6105eec39706ce8f201dc17d5006f024c2638c94634aee334ac5780e070853f4.json  query-6324dbe1863b399b8ea967b5e90460efbe77e0fd0563b71f27dec848feba4abf.json  query-687551f6e721b260ebce28ebb44d72b470107949f3b473ad55a26bba650a223b.json  query-712417ce0f28faaf2c4d9bbec3c389bbae24cece6fc61aa1521945e8eb95af31.json  query-75678c982abd729ebbbec0f0021eda65431f3a9803868f3a955e651d328a3fd4.json  query-7b2452e5955d4c444a436ecddbe6ac78b6a68f22c5fb24c9b57450f66b3a886d.json  (+38 more)
crates/timelord-analytics/: Cargo.toml  Dockerfile
crates/timelord-analytics/migrations/: 20260325000030_create_analytics_snapshots.sql
crates/timelord-analytics/src/: config.rs  health.rs  main.rs  nats_listener.rs  repo.rs  routes.rs
crates/timelord-auth/: Cargo.toml  Dockerfile
crates/timelord-auth/migrations/: 20260325000001_create_users.sql  20260325000002_create_organizations.sql  20260325000003_create_org_members.sql  20260325000004_create_sessions.sql  20260325000005_create_provider_tokens.sql  20260325000006_create_audit_log.sql  20260325000007_add_password_auth.sql
crates/timelord-auth/src/: cli.rs  config.rs  lib.rs  main.rs
crates/timelord-auth/src/grpc/: auth_service.rs
crates/timelord-auth/src/models/: mod.rs  org.rs  org_member.rs  provider_token.rs  session.rs  user.rs
crates/timelord-auth/src/repo/: mod.rs  org_repo.rs  session_repo.rs  token_repo.rs  user_repo.rs
crates/timelord-auth/src/routes/: admin.rs  health.rs  login.rs  mod.rs  oauth_google.rs  oauth_microsoft.rs  session.rs  setup.rs
crates/timelord-auth/src/services/: jwt.rs  mod.rs  oauth.rs  password.rs  rbac.rs  session.rs  token_encryption.rs
crates/timelord-calendar/: Cargo.toml  Dockerfile
crates/timelord-calendar/migrations/: 20260325000010_create_calendars.sql  20260325000011_create_events.sql  20260325000012_create_sync_state.sql
crates/timelord-calendar/src/: config.rs  main.rs  middleware.rs
crates/timelord-calendar/src/grpc/: calendar_service.rs  mod.rs
crates/timelord-calendar/src/models/: calendar.rs  event.rs
crates/timelord-calendar/src/repo/: calendar_repo.rs  event_repo.rs  mod.rs  sync_state_repo.rs
crates/timelord-calendar/src/routes/: calendars.rs  events.rs  health.rs  mod.rs  provider.rs
crates/timelord-calendar/src/services/: calendar_service.rs  event_service.rs  mod.rs  nats_publisher.rs  provider_client.rs
crates/timelord-common/: Cargo.toml
crates/timelord-common/src/: audit.rs  auth_claims.rs  config.rs  db.rs  error.rs  lib.rs  pagination.rs  provider_token.rs  telemetry.rs  token_encryption.rs  token_refresh.rs  types.rs
crates/timelord-gateway/: Cargo.toml  Dockerfile
crates/timelord-gateway/src/: config.rs  main.rs
crates/timelord-gateway/src/grpc_clients/: auth_client.rs  mod.rs
crates/timelord-gateway/src/middleware/: auth.rs  rate_limit.rs  request_id.rs
crates/timelord-gateway/src/routes/: health.rs  mod.rs  proxy.rs
crates/timelord-gateway/static/: onboarding.html
crates/timelord-mcp/: Cargo.toml  Dockerfile
crates/timelord-mcp/src/: config.rs  main.rs  repo.rs  tools.rs
crates/timelord-proto/: Cargo.toml  build.rs
crates/timelord-proto/proto/: analytics.proto  auth.proto  calendar.proto  common.proto  mcp.proto  solver.proto  sync.proto
crates/timelord-proto/src/: lib.rs
crates/timelord-solver/: Cargo.toml  Dockerfile
crates/timelord-solver/migrations/: 20260325000020_create_optimization_tables.sql
crates/timelord-solver/src/: config.rs  main.rs  models.rs  solver.rs
crates/timelord-solver/src/repo/: event_repo.rs  mod.rs  run_repo.rs  suggestion_repo.rs
crates/timelord-solver/src/routes/: apply.rs  health.rs  mod.rs  optimize.rs
crates/timelord-sync/: Cargo.toml  Dockerfile
crates/timelord-sync/src/: config.rs  main.rs  sync_loop.rs
crates/timelord-sync/src/provider/: google.rs  microsoft.rs  mod.rs
crates/timelord-sync/src/repo/: calendar_repo.rs  event_repo.rs  mod.rs  sync_state_repo.rs
