[workspace]
resolver = "2"
members = [
    "crates/timelord-proto",
    "crates/timelord-common",
    "crates/timelord-auth",
    "crates/timelord-calendar",
    "crates/timelord-gateway",
    "crates/timelord-sync",
    "crates/timelord-solver",
    "crates/timelord-analytics",
    "crates/timelord-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/ensell-yes/timelord"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "propagate-header"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "json",
    "migrate",
    "derive",
    "macros",
] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# Auth
oauth2 = "4"
jsonwebtoken = "9"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# IDs and time
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Cache
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Messaging
async-nats = "0.37"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ILP Solver (solver stub)
good_lp = { version = "1", default-features = false, features = ["clarabel"] }

# MCP (mcp stub)
rmcp = { version = "0.1", features = ["server", "transport-sse-server", "transport-child-process"] }

# Crypto
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# Config
dotenvy = "0.15"

# Error handling
thiserror = "2"
anyhow = "1"

# Testing
wiremock = "0.6"

# Internal crates
timelord-proto = { path = "crates/timelord-proto" }
timelord-common = { path = "crates/timelord-common" }
