[package]
name = "timelord-auth"
description = "Authentication and authorization service for Timelord"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "timelord-auth"
path = "src/main.rs"

[dependencies]
timelord-common.workspace = true
timelord-proto.workspace = true
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tonic.workspace = true
sqlx.workspace = true
oauth2.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
redis.workspace = true
tracing.workspace = true
aes-gcm.workspace = true
base64.workspace = true
rand.workspace = true
hex.workspace = true
sha2.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tower.workspace = true
tower-http.workspace = true
dotenvy.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true }
