[package]
name = "timelord-calendar"
description = "Calendar and event management service for Timelord"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "timelord-calendar"
path = "src/main.rs"

[dependencies]
timelord-common.workspace = true
timelord-proto.workspace = true
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tonic.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-nats.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tower.workspace = true
tower-http.workspace = true
dotenvy.workspace = true

[dev-dependencies]
wiremock.workspace = true
tokio = { workspace = true }
