[package]
name = "timelord-gateway"
description = "API gateway and BFF for Timelord"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "timelord-gateway"
path = "src/main.rs"

[dependencies]
timelord-common.workspace = true
timelord-proto.workspace = true
axum.workspace = true
axum-extra.workspace = true
tokio.workspace = true
tonic.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
redis.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tower.workspace = true
tower-http.workspace = true
axum-server.workspace = true
rustls.workspace = true
dotenvy.workspace = true
