[package]
name = "timelord-mcp"
description = "MCP server for AI agent integration with Timelord (stub)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "timelord-mcp"
path = "src/main.rs"

[dependencies]
timelord-common.workspace = true
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
rmcp.workspace = true
tracing.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
schemars = "1"
