[package]
name = "timelord-proto"
description = "Generated protobuf/gRPC types for Timelord inter-service communication"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
tonic.workspace = true
serde = { workspace = true }

[build-dependencies]
tonic-build.workspace = true
