[package]
name = "timelord-solver"
description = "ILP-based calendar optimization engine for Timelord (stub)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "timelord-solver"
path = "src/main.rs"

[dependencies]
timelord-common.workspace = true
tokio.workspace = true
axum.workspace = true
tracing.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
good_lp.workspace = true
