[package]
name = "timelord-sync"
description = "Calendar sync service for Timelord (stub)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "timelord-sync"
path = "src/main.rs"

[dependencies]
timelord-common.workspace = true
tokio.workspace = true
axum.workspace = true
sqlx.workspace = true
reqwest.workspace = true
async-nats.workspace = true
uuid.workspace = true
chrono.workspace = true
chrono-tz = "0.10"
tracing.workspace = true
dotenvy.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
